chore(page): clean up modifiers

--- a/src/patternfly/demos/Drawer/examples/drawer-jump-links.hbs
+++ b/src/patternfly/demos/Drawer/examples/drawer-jump-links.hbs
@@ -6,7 +6,7 @@
       {{#> drawer-content drawer-content--attribute=(concat 'id="' drawer--id '-scrollable-container"')}}
         {{#> sidebar}}
           {{#> sidebar-panel sidebar-panel--modifier="pf-m-sticky pf-m-gutter"}}
-            {{#> page-main-section page-main-section--modifier="pf-m-light"}}
+            {{#> page-main-section}}
               {{#> jump-links jump-links--IsExpandable="true" jump-links--modifier="pf-m-vertical pf-m-non-expandable-on-md"}}
                 {{#> jump-links-label}}
                   Jump to section
@@ -16,7 +16,7 @@
             {{/page-main-section}}
           {{/sidebar-panel}}
           {{#> sidebar-content}}
-            {{#> page-main-section page-main-section--modifier="pf-m-light"}}
+            {{#> page-main-section}}
               {{> jump-links-template-content}}
             {{/page-main-section}}
           {{/sidebar-content}}
