--- a/src/patternfly/layouts/Flex/flex.scss
+++ b/src/patternfly/layouts/Flex/flex.scss
@@ -36,7 +36,8 @@ $pf-v6-l-flex--variable-map: build-variable-map("#{$pf-prefix}l-flex--spacer", $
 // stylelint-disable no-duplicate-selectors, max-nesting-depth
 
 // Item
-.#{$flex} > * {
+.#{$flex}__group,
+.#{$flex}__item {
   // set/reset layout spacers on children, since the parent flex layout can be a child of another flex layout and needs these values from its parent
   --#{$flex}--spacer: initial;
   --#{$flex}--spacer--column: var(--#{$flex}--spacer, var(--#{$flex}--spacer--column--base));
@@ -79,12 +80,12 @@ $pf-v6-l-flex--variable-map: build-variable-map("#{$pf-prefix}l-flex--spacer", $
     @include pf-v6-apply-breakpoint($breakpoint) {
       // display
       &.pf-m-flex#{$breakpoint-name} {
-        display: var(--#{$flex}--Display);
+        display: flex;
       }
 
       // inline flex
       &.pf-m-inline-flex#{$breakpoint-name} {
-        --#{$flex}--Display: inline-flex;
+        display: inline-flex;
       }
 
       // flex-direction
@@ -95,7 +96,8 @@ $pf-v6-l-flex--variable-map: build-variable-map("#{$pf-prefix}l-flex--spacer", $
         flex-direction: column;
         align-items: normal;
 
-        > * {
+        > .#{$flex}__group,
+        > .#{$flex}__item {
           margin-block-start: 0;
           margin-block-end: var(--#{$flex}--spacer--row);
           margin-inline-start: 0;
@@ -108,7 +110,8 @@ $pf-v6-l-flex--variable-map: build-variable-map("#{$pf-prefix}l-flex--spacer", $
         flex-direction: column-reverse;
         align-items: normal;
 
-        > * {
+        > .#{$flex}__group,
+        > .#{$flex}__item {
           margin-block-start: var(--#{$flex}--spacer--row);
           margin-block-end: 0;
           margin-inline-start: 0;
@@ -122,7 +125,8 @@ $pf-v6-l-flex--variable-map: build-variable-map("#{$pf-prefix}l-flex--spacer", $
         align-items: var(--#{$flex}--m-row--AlignItems);
 
         // unset styling set for .pf-m-column
-        > * {
+        > .#{$flex}__group,
+        > .#{$flex}__item {
           margin-block-start: 0;
           margin-block-end: 0;
           margin-inline-start: 0;
@@ -136,7 +140,8 @@ $pf-v6-l-flex--variable-map: build-variable-map("#{$pf-prefix}l-flex--spacer", $
         align-items: var(--#{$flex}--m-row-reverse--AlignItems);
 
         // unset styling set for .pf-m-column
-        > * {
+        > .#{$flex}__group,
+        > .#{$flex}__item {
           margin-block-start: 0;
           margin-block-end: 0;
           margin-inline-start: var(--#{$flex}--spacer--column);
