fix(flex): removed global selectors

--- a/src/patternfly/layouts/Flex/flex.scss
+++ b/src/patternfly/layouts/Flex/flex.scss
@@ -36,7 +36,9 @@ $pf-v6-l-flex--variable-map: build-variable-map("#{$pf-prefix}l-flex--spacer", $
 // stylelint-disable no-duplicate-selectors, max-nesting-depth
 
 // Item
-.#{$flex} > * {
+.#{$flex} .#{$flex},
+.#{$flex}__group,
+.#{$flex}__item {
   // set/reset layout spacers on children, since the parent flex layout can be a child of another flex layout and needs these values from its parent
   --#{$flex}--spacer: initial;
   --#{$flex}--spacer--column: var(--#{$flex}--spacer, var(--#{$flex}--spacer--column--base));
@@ -94,7 +96,9 @@ $pf-v6-l-flex--variable-map: build-variable-map("#{$pf-prefix}l-flex--spacer", $
         column-gap: var(--#{$flex}--spacer--column--base);
         align-items: normal;
 
-        > * {
+        > .#{$flex} > .#{$flex},
+        > .#{$flex}__group,
+        > .#{$flex}__item {
           margin-block-start: 0;
           margin-block-end: var(--#{$flex}--spacer--row);
           margin-inline-start: 0;
@@ -107,7 +111,9 @@ $pf-v6-l-flex--variable-map: build-variable-map("#{$pf-prefix}l-flex--spacer", $
         flex-direction: column-reverse;
         align-items: normal;
 
-        > * {
+        > .#{$flex} > .#{$flex},
+        > .#{$flex}__group,
+        > .#{$flex}__item {
           margin-block-start: var(--#{$flex}--spacer--row);
           margin-block-end: 0;
           margin-inline-start: 0;
@@ -121,7 +127,9 @@ $pf-v6-l-flex--variable-map: build-variable-map("#{$pf-prefix}l-flex--spacer", $
         align-items: var(--#{$flex}--m-row--AlignItems);
 
         // unset styling set for .pf-m-column
-        > * {
+        > .#{$flex} > .#{$flex},
+        > .#{$flex}__group,
+        > .#{$flex}__item {
           margin-block-start: 0;
           margin-block-end: 0;
           margin-inline-start: 0;
@@ -135,7 +143,9 @@ $pf-v6-l-flex--variable-map: build-variable-map("#{$pf-prefix}l-flex--spacer", $
         align-items: var(--#{$flex}--m-row-reverse--AlignItems);
 
         // unset styling set for .pf-m-column
-        > * {
+        > .#{$flex} > .#{$flex},
+        > .#{$flex}__group,
+        > .#{$flex}__item {
           margin-block-start: 0;
           margin-block-end: 0;
           margin-inline-start: var(--#{$flex}--spacer--column);
@@ -305,7 +315,9 @@ $pf-v6-l-flex--variable-map: build-variable-map("#{$pf-prefix}l-flex--spacer", $
     @include pf-v6-apply-breakpoint($breakpoint) {
       @each $spacer, $spacer-value in $pf-v6-l-flex--spacer-map {
         &.pf-m-space-items-#{$spacer}#{$breakpoint-name} {
-          > * {
+          > .#{$flex} > .#{$flex},
+          > .#{$flex}__group,
+          > .#{$flex}__item {
             --#{$flex}--spacer: var(#{map-get($pf-v6-l-flex--variable-map, $spacer-value)});
           }
 
@@ -354,13 +366,15 @@ $pf-v6-l-flex--variable-map: build-variable-map("#{$pf-prefix}l-flex--spacer", $
       }
 
       &#{$pf-v6-l-flex--gap--selectors} {
-        > * {
-          margin-block-end: 0;
-          margin-inline-end: 0;
+        > .#{$flex} > .#{$flex},
+        > .#{$flex}__group,
+        > .#{$flex}__item {
+          margin: 0;
         }
       }
     }
   }
+
 
   // .pf-m-row-gap{-[size]}{-on-[breakpoint]}
   @each $breakpoint, $breakpoint-value in $pf-v6-l-flex--breakpoint-map {
@@ -375,13 +389,15 @@ $pf-v6-l-flex--variable-map: build-variable-map("#{$pf-prefix}l-flex--spacer", $
         $pf-v6-l-flex--row-gap--selectors: append($pf-v6-l-flex--row-gap--selectors, $selector, $separator: comma);
 
        &#{$selector} {
-          margin-block-end: #{$spacer-value};
+          row-gap: #{$spacer-value};
         }
       }
 
-      &:is(#{$pf-v6-l-flex--row-gap--selectors}) {
-        > * {
-          margin-block-end: 0;
+      &#{$pf-v6-l-flex--row-gap--selectors} {
+        > .#{$flex} > .#{$flex},
+        > .#{$flex}__group,
+        > .#{$flex}__item {
+          margin: 0;
         }
       }
     }
@@ -404,9 +420,11 @@ $pf-v6-l-flex--variable-map: build-variable-map("#{$pf-prefix}l-flex--spacer", $
         }
       }
 
-      &:is(#{$pf-v6-l-flex--column-gap--selectors}) {
-        > * {
-          margin-inline-end: 0;
+      &#{$pf-v6-l-flex--column-gap--selectors} {
+        > .#{$flex} > .#{$flex},
+        > .#{$flex}__group,
+        > .#{$flex}__item {
+          margin: 0;
         }
       }
     }
